--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -242,6 +242,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Descripció</string>
     <string name="edit_picture">Edita la imatge</string>
     <string name="math">Matemàtiques</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Introduïu els atributs de YAML Front Matter per mostrar-los al començament dels documents visualitzats. capçalera. Introduïu les claus separades per comes. Deixeu-lo en blanc per a cap o feu servir \'*\' per a tots. \n\nSi teniu alguna clau, és a dir, títol: \"Hola\" definida i hi ha {{ post.title }} al vostre text, sempre es substituirà. D\'aquesta manera, podeu fer una visualització de matèria frontal personalitzada.</string>
     <string name="table_of_contents">Taula de continguts</string>
     <string name="miscellaneous">Divers</string>
     <string name="textaction">Accions de text</string>
