--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -27,7 +27,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="create_folder">Criar pasta</string>
     <string name="create_new_document">Criar novo documento</string>
     <string name="move">Mover</string>
-    <string name="copy">copiar</string>
+    <string name="copy">Copiar</string>
     <string name="info">Informações</string>
     <string name="file_folder_already_exists_please_use_a_different_name">Arquivo/pasta já existe! Por favor use um nome diferente</string>
     <string name="import_from_device">Importar do dispositivo</string>
@@ -242,11 +242,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Descrição</string>
     <string name="edit_picture">Editar imagem</string>
     <string name="math">Matemática</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Digite os atributos de Matérias Virtuais YAML a serem exibidos no início dos documentos visualizados. cabeçalho. Insira as teclas separadas por vírgulas. Deixe em branco para nenhum ou use \'*\' para todos. \n\nSe você tem alguma chave, ou seja, title: \'Olá\' definido e há {{ post.title }} no seu texto, ele sempre será substituído. Você pode fazer uma frente personalizada exibir desta maneira.</string>
     <string name="table_of_contents">Tabela de conteúdos</string>
     <string name="miscellaneous">Diversos</string>
     <string name="textaction">Ações de texto</string>
     <string name="textactions">Ações de texto</string>
-    <string name="prefer_view">Vista preferida</string>
+    <string name="prefer_view">Preferir modo de visualização</string>
     <string name="no_calendar_app_is_installed">Nenhum aplicativo de calendário está instalado!</string>
     <string name="popular_documents">Documentos populares</string>
     <string name="color">Cor</string>
@@ -358,7 +359,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_context">Adicionar contexto</string>
     <string name="add_project">Adicionar projeto</string>
     <string name="archive_completed_tasks">Arquivar tarefas concluídas</string>
-
     <string name="create_new_file_or_folder">Criar um novo arquivo ou pasta</string>
     <string name="choose_format">Escolha o formato</string>
     <string name="selected">Selecionado</string>
@@ -433,4 +433,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="search_dynamically_for_notebook_root">Para seguir os links da wiki, procure dinamicamente o arquivo notebook.zim para identificar o diretório raiz do caderno atual. Verifique se você utiliza vários blocos de anotações zím ou o diretório de anotações definido no app não corresponde ao seu caderno zim.</string>
     <string name="share_into_format_prefix_for_text_shared">Formato/Prefixo para texto compartilhado no Markor. Segue as regras de SimpleDateFormat do Android.\n\nUse o espaço reservado \'%s\' (cercado por aspas simples) para posicionar o texto compartilhado. Se não for especificado, o texto compartilhado é anexado e o formato usado como prefixo.</string>
     <string name="share_into_format">Compartilhar em - Formato</string>
+    <string name="auto_format">Auto-formatar</string>
 </resources>
