--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -84,7 +84,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="sort_by">排列</string>
     <string name="date">依日期排列</string>
     <string name="deleteme____1">依名稱排列</string>
-    <string name="size">依大小排列</string>
+    <string name="size">大小</string>
     <string name="reverse_order">反轉順序</string>
     <string name="contribute">貢獻</string>
     <string name="donate">贊助</string>
@@ -348,7 +348,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="inline_code">行間內程式碼</string>
     <string name="horizontal_line">水平分隔線</string>
     <string name="link_color">連結顏色</string>
-
     <string name="create_new_file_or_folder">建立新檔案或資料夾</string>
     <string name="choose_format">選擇格式</string>
     <string name="selected">選擇</string>
@@ -377,4 +376,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="skip_all">全部跳過</string>
     <string name="overwrite_all">全部覆寫</string>
     <string name="infinite">無限</string>
+    <string name="auto_format">自動格式化</string>
 </resources>
