--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -242,6 +242,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Beskrivning</string>
     <string name="edit_picture">Redigera bild</string>
     <string name="math">Matematik</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Ange YAML Front Matter attribut för att visa i början av visade dokument. header. Ange nycklar separerade med kommatecken. Lämna tomt för ingen eller använd \'*\' för alla. \n\nOm du har någon nyckel, dvs titel: \'Hej\' definierad och det finns {{ post.title }} i din text, kommer den alltid att ersättas. Du kan göra en anpassad front materia visa detta sätt.</string>
     <string name="table_of_contents">Innehållsförteckning</string>
     <string name="miscellaneous">Diverse</string>
     <string name="textaction">Åtgärd för text</string>
@@ -358,7 +359,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_context">Lägg till kontext</string>
     <string name="add_project">Lägg till projekt</string>
     <string name="archive_completed_tasks">Arkivera slutförda uppgifter</string>
-
     <string name="create_new_file_or_folder">Skapa en ny fil eller mapp</string>
     <string name="choose_format">Välj format</string>
     <string name="selected">Vald</string>
@@ -433,4 +433,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="search_dynamically_for_notebook_root">För att följa wiki-länkar, dynamiskt söka efter filen notebook.zim för att identifiera rotkatalogen för den aktuella anteckningsboken. Kontrollera detta om du använder flera anteckningsböcker för zim eller den anteckningsbok som anges i appen inte motsvarar din anteckningsbok för zim.</string>
     <string name="share_into_format_prefix_for_text_shared">Format/Prefix för text som delas in i Markor. Följer Androids SimpleDateFormat regler.\n\nAnvänd platshållaren \'%s\' (omgiven av enstaka offerter) för att placera den delade texten. Om den inte anges läggs den delade texten till och formatet används som prefix.</string>
     <string name="share_into_format">Dela till - Format</string>
+    <string name="auto_format">Auto-format</string>
 </resources>
