--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -242,6 +242,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Descrizione</string>
     <string name="edit_picture">Modifica immagine</string>
     <string name="math">Matematica</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Inserisci gli attributi YAML Front Matter da mostrare all\'inizio dei documenti visualizzati. intestazione. Inserisci le chiavi separate da virgole. Lasciare vuoto per nessuna o usare \'*\' per tutti. \n\nSe hai una chiave, ad es. title: \'Ciao\' definito e c\'è {{ post.title }} nel tuo testo, sarà sempre sostituito. In questo modo è possibile visualizzare una questione frontale personalizzata.</string>
     <string name="table_of_contents">Indice</string>
     <string name="miscellaneous">Varie</string>
     <string name="textaction">Azione sul testo</string>
@@ -358,7 +359,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_context">Aggiungi contesto</string>
     <string name="add_project">Aggiungi progetto</string>
     <string name="archive_completed_tasks">Archivia attività completate</string>
-
     <string name="create_new_file_or_folder">Crea un nuovo file o cartella</string>
     <string name="choose_format">Scegli il formato</string>
     <string name="selected">Selezionati</string>
@@ -433,4 +433,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="search_dynamically_for_notebook_root">Per seguire i collegamenti wiki, cerca dinamicamente il file notebook.zim per identificare la directory radice per il notebook corrente. Spunta questa opzione se usi più notebook zim o la directory del notebook impostata nell\'app non corrisponde al tuo notebook zim.</string>
     <string name="share_into_format_prefix_for_text_shared">Formato/Prefisso per il testo condiviso in Markor. Segue le regole SimpleDateFormat di Android.\n\nUsa il segnaposto \'%s\' (circondato da virgolette singole) per posizionare il testo condiviso. Se non specificato, il testo condiviso è messo in fondo e il formato usato come prefisso.</string>
     <string name="share_into_format">Condividi in - Formato</string>
+    <string name="auto_format">Autoformattazione</string>
 </resources>
