--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -257,7 +257,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Description</string>
     <string name="edit_picture">Edit picture</string>
     <string name="math">Math</string>
-    <string name="enter_yaml_front_matter_attributes_to_show">Enter YAML Front Matter attributes to show at the beginning of viewed documents. header. Enter keys separated by commas. Leave empty for none or use \'*\' for all. \n\nIf you have any key, i.e. title: \'Hello\' defined and there is {{ post.title }} in your text, it will always be replaced. You can make a custom front matter display this way.</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Display entered YAML Front Matter attributes on top at viewed documents. Enter keys separated by commas. Leave empty for none or use \'*\' for all. \n\nIf any attribute is defined in the document (i.e. title: \'Hello\') and there is {{ post.title }} in your document too it is replaced. You can make a custom Front Matter heading this way.</string>
     <string name="table_of_contents">Table of contents</string>
     <string name="miscellaneous">Miscellaneous</string>
     <string name="textaction">Text action</string>
