--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -242,6 +242,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Descrição</string>
     <string name="edit_picture">Editar imagem</string>
     <string name="math">Matemática</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Exiba os atributos de Matérias Virtuais YAML digitados em cima em documentos visualizados. Insira as teclas separadas por vírgulas. Deixe em branco para nenhum ou use \'*\' para todos. \n\nSe algum atributo for definido no documento (por exemplo, title: \'Hello\') e {{ post.title }} em seu documento também ele foi substituído. Você pode fazer uma questão de Frente personalizada indo nessa direção.</string>
     <string name="table_of_contents">Tabela de conteúdos</string>
     <string name="miscellaneous">Diversos</string>
     <string name="textaction">Ações de texto</string>
