--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -242,6 +242,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Beskrivning</string>
     <string name="edit_picture">Redigera bild</string>
     <string name="math">Matematik</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Visa inmatade YAML Front Matter attribut högst upp på visade dokument. Ange nycklar separerade med kommatecken. Lämna tomt för ingen eller använd \'*\' för alla. \n\nOm något attribut är definierat i dokumentet (dvs. titel: \'Hej\') och det finns {{ post.title }} i ditt dokument också det ersätts. Du kan göra en anpassad Front Matter rubrik på detta sätt.</string>
     <string name="table_of_contents">Innehållsförteckning</string>
     <string name="miscellaneous">Diverse</string>
     <string name="textaction">Åtgärd för text</string>
