--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -242,6 +242,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Description</string>
     <string name="edit_picture">Éditer l\'image</string>
     <string name="math">Math</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Afficher les attributs entrés YAML Front Matter en haut des documents visualisés. Entrez les clés séparées par des virgules. Laisser vide pour aucun ou utiliser \'*\' pour tous. \n\nSi un attribut est défini dans le document (i.e. title: \'Bonjour\') et il y a {{ post.title }} dans votre document aussi, il est remplacé. Vous pouvez faire un en-tête personnalisé de cette façon.</string>
     <string name="table_of_contents">Table des matières</string>
     <string name="miscellaneous">Divers</string>
     <string name="textaction">Action texte</string>
