[ci skip] Update translations (Polish)

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -242,7 +242,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Opis</string>
     <string name="edit_picture">Edytuj obrazek</string>
     <string name="math">Matematyka</string>
-    <string name="enter_yaml_front_matter_attributes_to_show">Wyświetl wprowadzone atrybuty YAML Front Matter na górze oglądanych dokumentów. Wprowadź klucze oddzielone przecinkami. Pozostaw puste, aby nie użyć \'*\' dla wszystkich. \n\nJeśli jakiś atrybut jest zdefiniowany w dokumencie (tj. title: \'Witaj\') i w Twoim dokumencie znajduje się {{ post.title }} , również jest zamieniony. W ten sposób możesz ustawić własny nagłówek Front Spraw.</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Pokaż użyte atrybuty YAML Front Matter na górze oglądanych dokumentów. Wprowadź klucze oddzielone przecinkami. Pozostaw puste, aby nie pokazywać żadnych lub \'*\' żeby pokazać wszystkie. \n\nJeśli jakiś atrybut jest zdefiniowany w dokumencie (tj. title: \'Hello\'), a w dokumencie znajduje się {{ post.title }}, to również zostanie zamieniony. W ten sposób możesz ustawić własny nagłówek Front Matter.</string>
     <string name="table_of_contents">Spis treści</string>
     <string name="miscellaneous">Różne</string>
     <string name="textaction">Akcja tekstu</string>
@@ -415,7 +415,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="copy_move_conflict_message">\'%s\' już istnieje w %s</string>
     <string name="additional_contexts_and_projects">Dodatkowe konteksty i projekty</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Wprowadź oddzielone spacjami @contexts i +projekty. Będą one zawsze widoczne w oknie dialogowym wstawiania todo.txt.</string>
-    <string name="infinite">Nieskończone</string>
+    <string name="infinite">Bez ograniczeń</string>
     <string name="browse_by_project">Przeglądaj według projektu</string>
     <string name="browse_by_context">Przeglądaj według kontekstu</string>
     <string name="insert_project">Wstaw projekty</string>
